# cqam

./: .gitignore  Cargo.toml  README.md  simple_qrng.cqam
cqam-as/: Cargo.toml
cqam-codegen/: Cargo.toml
cqam-core/: Cargo.toml
cqam-dbg/: Cargo.toml
cqam-dbg/src/: app.rs  ecall.rs  lib.rs  main.rs
cqam-dbg/src/command/: exec.rs  mod.rs  parse.rs
cqam-dbg/src/engine/: breakpoint.rs  condition.rs  mod.rs  snapshot.rs  watchpoint.rs
cqam-dbg/src/format/: instruction.rs  mod.rs  quantum.rs  register.rs
cqam-dbg/src/ui/: cmd_pane.rs  code_pane.rs  mod.rs  output_pane.rs  quantum_pane.rs  state_pane.rs  theme.rs
cqam-dbg/tests/: quantum_algorithms.rs
cqam-micro/: Cargo.toml
cqam-qpu/: Cargo.toml
cqam-qpu-ibm/: Cargo.toml  build.rs
cqam-qpu-ionq/: Cargo.toml
cqam-qpu-ionq/src/: backend.rs  calibration.rs  circuit.rs  error.rs  lib.rs  rest.rs
cqam-qpu-ionq/tests/: integration_test.rs
cqam-run/: Cargo.toml  example_config.toml
cqam-run/src/: lib.rs  loader.rs  main.rs  report.rs  runner.rs  shot.rs  simconfig.rs
cqam-run/tests/: error_cases.rs  integration_tests.rs  mock_qpu_tests.rs  qpreps_integration_tests.rs  qpu_integration.rs  run_tests.rs
cqam-sim/: Cargo.toml
cqam-sim/src/: backend.rs  circuit_backend.rs  complex.rs  constants.rs  density_matrix.rs  joint_qdist.rs  kernel.rs  lib.rs  qdist.rs  quantum_register.rs  statevector.rs
cqam-sim/src/density_matrix/: construction.rs  core.rs  display.rs  gates.rs  jacobi.rs  measurement.rs  metrics.rs  mod.rs  noise.rs
cqam-sim/src/kernels/: controlled_u.rs  diagonal.rs  diffuse.rs  entangle.rs  fourier.rs  fourier_inv.rs  grover.rs  init.rs  permutation.rs  phase.rs  rotate.rs
cqam-sim/src/noise/: channels.rs  mod.rs  neutral_atom.rs  photonic.rs  spin.rs  superconducting.rs  trajectory.rs  trapped_ion.rs
cqam-sim/tests/: density_matrix_tests.rs  entanglement_detection.rs  grover_correctness_tests.rs  joint_qdist_tests.rs  kernel_tests.rs  measurable_tests.rs  qdist_tests.rs  statevector_tests.rs
cqam-vm/: Cargo.toml
cqam2qasm/: Cargo.toml  README.md
cqam2qasm/examples/: basic.cqam  hybrid.cqam  quantum.cqam  test.cqam
cqam2qasm/src/: lib.rs  main.rs  qasm.rs
cqam2qasm/tests/: cli_tests.rs  qasm_tests.rs
cqam2qasm/tests/data/: output.qasm  sample.cqam
examples/: adapt_vqe.cqam  amplitude_estimation.cqam  arithmetic.cqam  bell_state.cqam  bernstein_vazirani.cqam  bitflip_repetition.cqam  coined_quantum_walk.cqam  deutsch_jozsa.cqam  diagonal_hamiltonian_sim.cqam  durr_hoyer.cqam  ecall_hello.cqam  eigenvalue_estimation.cqam  error_detection.cqam  grover.cqam  (+34 more)
(+187 files in other folders)
