[package]
name = "cqam-qpu-ionq"
version = "0.1.0"
edition = "2021"

[dependencies]
cqam-core = { path = "../cqam-core" }
cqam-qpu  = { path = "../cqam-qpu" }

reqwest    = { version = "0.12", features = ["json", "blocking"] }
tracing    = "0.1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mockito = "1"

[lib]
name = "cqam_qpu_ionq"
path = "src/lib.rs"
