[package]
name = "cqam-run"
version = "0.1.0"
edition = "2024"

[dependencies]
cqam-core = { path = "../cqam-core" }
cqam-as = { path = "../cqam-as" }
cqam-sim = { path = "../cqam-sim" }
cqam-vm = { path = "../cqam-vm" }
cqam-qpu = { path = "../cqam-qpu", features = ["mock"] }
cqam-micro = { path = "../cqam-micro" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
rand_chacha = "0.3"
